fix: farms staking/unstaking functionality, icons markup, use BigNumber.toFixed() while dealing with BigNumber amount more than 1000 tokens
- fix: add error logging for useApproveFarm;

- feat: add logger with console.group(), etc;

- fix: MAX_UINT_256 BigNumber incorrect conversion in contract methods;

- fix: BigNumber amount more than 1000 tokens useStakeFarm - stakeFarm as toFixed(), useUnstakeFarm - unstakeFarm as unstaking;

- fix: add currency icons overlapping;

- fix: unable staking with 0 balance; add addLiquidityLink inside modal "Get <lp_token_name> LP";

--- a/src/components/sections/Farms/TableRow/TableRow.scss
+++ b/src/components/sections/Farms/TableRow/TableRow.scss
@@ -36,6 +36,18 @@
     }
   }
 
+  &__currencies {
+  }
+
+  &__currencies-pair {
+  }
+
+  &__currencies-pair-item {
+    &:last-child {
+      margin-left: -5px;
+    }
+  }
+
   &__extra-text {
     display: none;
   }
